# Compression_dimages_par_DFT

./: README.md
cpp_implementation/ImageCompression/: CMakeLists.txt  CompresseurAbstrait.h  CompresseurFactory.cpp  CompresseurFactory.h  CompressionImage.cpp  CompressionImage.h  GestionnaireImage.cpp  GestionnaireImage.h  ProcesseurImage.cpp  ProcesseurImage.h  main.cpp  test.ipynb
pyhton_implementation/: main.py
